@@ -1,3 +1,5 @@
+* Support validate attribute of wizard's Button
+
 Version 5.4.0 - 2019-11-04
 * Bug fixes (see mercurial logs for details)
 * Support visual context on tree view
